# PyCUC

./: README.md  pyproject.toml  setup.py
examples/: mapper.py
pycuc/: __init__.py  app.py
pycuc/config/: __init__.py  setting.py
pycuc/docs/: __init__.py  cuc.py  cucx.py  refs.py  utils.py
pycuc/models/: __init__.py  data.py
pycuc/utils/: tools.py
release/: v2.2.0.md
test/: test - area.py  test - concentration.py  test - heat transfer coefficient.py  test-area-per-length.py  test-energy-rate.py  test-length.py  test-micro.py  test-molecular-weight.py  test-velocity.py  test3.py  test4.py  test5.py  test6.py  test7 - flowrate.py
